# SCIT-Management-System

./: CMakeLists.txt  main.cpp
Data/: classrooms.csv  courses.csv  faculty.csv  students.csv  timeslots.csv
